# aim

./: api.py  client.py  pyproject.toml
agents/browser_agent/: basic_browser_agent.py  browser_agent.py  context_browser_agent.py  full_agent.py  full_browser_agent.py
agents/chat_agent/: basic_chat_agent.py
agents/code_agent/: basic_code_agent.py
agents/codebase_agent/: basic_code_agent.py  codebase_agent.py  full_code_agent.py
agents/enquiry_agent/: basic_enquiry_agent.py
agents/resource_agent/: basic_resource_agent.py
api/: api_models.py  api_server.py
api/v0/: model.py  server.py
archive/project_structure/: dummy_structure.json
providers/backbone/: backbone_provider.py
providers/browser/: browser_models.py  browser_provider.py
providers/codebase/: codebase_models.py  codebase_provider.py
providers/memory/: memory_provider.py
providers/resource/: resource_models.py  resource_provider.py
providers/resource/account/: account_provider.py
task_plans/: ai_prompt_library_2.json  company_news_website_with_categories_and_tags.json  dummy_plan.json
tests/: test_account_provider.py  test_codebase_agent.py  test_devbox_provider.py  test_resource_provider.py
workflows/: context_flow.py
workflows/browser_workflows/: context_browser_flow.py  full_browser_flow.py
workflows/code_workflows/: basic_code_flow.py
workflows/codebase_workflows/: basic_code_flow.py  full_code_flow.py
workflows/manus_workflow/: basic_manus_workflow.py
workflows/mixed_workflow/: mixed_workflow.py
workflows/mixed_workflows/: mixed_flow.py
(+6 files in other folders)
